--- a/Parcial_Nicolas Chaparro/index.html
+++ b/Parcial_Nicolas Chaparro/index.html
@@ -9,47 +9,35 @@
     <body>
         <h1>Formulario</h1>
         
-        <label for="filtro">Nombres:</label>
+        <label>Nombres:</label>
         <input type="text" id="name">
 
-        <label for="filtro">Apellidos:</label>
+        <label>Apellidos:</label>
         <input type="text" id="apell">
 
-        <label for="filtro">Departamento:</label>
-        <input type="text" id="dep">
+        <label>Departamento:</label>
+        <select id="departamento"></select>
 
-        <label for="filtro">Municipio:</label>
+        <label>Municipio:</label>
         <input type="text" id="mun">
 
-        <label for="filtro">Fecha Nacimiento:</label>
+        <label>Fecha Nacimiento:</label>
         <input type="date" id="fechaN">
 
-        <label for="filtro">Salario:</label>
+        <label>Salario:</label>
         <input type="text" id="salario">
 
         <button id="enviar">Enviar Datos</button>
 
-        <script src="main.js"></script>
-
-
         <ul id="listaDatos"></ul>
 
 
-        <label for="buscar">Buscar:</label>
-        <input type="text" id="filtro" placeholder="Escribe el id">
+        <label>ID: </label>
+        <input type="text" id="filtro">
 
-        <button id="busc">Filtrar</button>
-        <table id="tabla">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nombre</th>
-                    <th>Edad</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <button id="buscar">Buscar</button>
 
+        <script src="main.js"></script>
 
     </body>
 </html>
